...
            "value": "Erlauben"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Allow"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Permitir"
...
